--- a/index.html
+++ b/index.html
@@ -1,41 +1,61 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="outlines.css">
-    <title>Портфолио Junior верстальщика</title>
-  </head>
-
-  <body>
-    <header class="page-header">
-      Контакты в шапке
-    </header>
-
-    <section class="hero-image">
-      <h1 class="heading">Неопознанный Енот</h1>
-      <p>Junior верстальщик</p>
-    </section>
-
-    <section class="intro">
-      <h2 class="subheading">Давайте познакомимся</h2>
-      <h3>Пара слов о себе</h3>
-      <p>Текст с парой слов о себе.</p>
-      <h3>Чем могу быть полезен</h3>
-      <p>Текст о том, чем могу быть полезен.</p>
-    </section>
-
-    <section class="portfolio">
-      <h2 class="subheading">Мои работы</h2>
-
-      <h3>Магазин товаров для дома</h3>
-      <p>Мой первый сайт.</p>
-
-      <h3>Блог начинающего верстальщика</h3>
-      <p>Статический блог про обучение HTML и CSS.</p>
-    </section>
-
-    <footer class="page-footer">
-      Контакты в подвале
-    </footer>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
+		<link rel="stylesheet" href="css/style.css" />
+		<title>Портфолио Junior верстальщика</title>
+	</head>
+	<body>
+		<header class="page-header">
+			<div class="container">
+				<a class="header-email" href="mailto:yana.rozova@mail.ru">yana.rozova@mail.ru</a>
+				<a class="header-phone" href="tel:+79604608234">+7 960 460 8 234</a>
+			</div>
+		</header>
+		<main>
+			<div class="container">
+				<section class="hero-image">
+					<h1 class="heading">Розова Яна Сергеевна</h1>
+					<p>Junior верстальщик</p>
+				</section>
+				<section class="intro">
+					<h2 class="subheading">Резюме</h2>
+					<figure>
+						<img src="files/iam.jpg"  width="928" height="536" alt="Моя фотография">
+					</figure>
+					<h3>Пара слов о себе</h3>
+					<p>
+						Образование высшее, бакалавр, инженер, магистр. Закончила Технологический институт Южного федерального университета (Таганрог) в 2010 году. Специальность: Оптические системы связи и
+						локации.
+					</p>
+					<p>С 2020 года увлекаюсь вёрсткой страниц сайтов. В 2021 прошла обучение на курсах "HTML Academy"</p>
+					<p>Интересы и хобби. Играю в большой теннис. Работаю помощником тренера в клубе Play Теннис с 2007 года.</p>
+					<h3>Основные навыки</h3>
+					<p>
+						Вёрстка страниц сайтов в редакторе VS Code (html, scc, scss). Работа в программах Figma, Adobe Photoshop (ретуширование фотографий, создание макетов), Corel Draw (создание векторных
+						изображений, макетирование). Знание программ пакета Office. Начальные знания Adobe InDesign. Работа с офисной техникой (распечатка, сканирование, настройка). Уровень владения компьютером:
+						Продвинутый пользователь.
+					</p>
+				</section>
+				<section class="portfolio">
+					<h2 class="subheading">Мои работы</h2>
+					<figure class="project-image">
+						<img src="files/projecttm.jpg" width="928" height="536" alt="Cайт магазина строительных материалов">
+					</figure>
+					<h3>Интернет-магазин "Техномарт"</h3>
+					<p>Сайт сделан в результате обучения в HTML Academy</p>
+					<a class="button" href="https://chiprose.github.io/1753747-technomart-31/">Открыть страницу</a>
+					<h3>Блог начинающего верстальщика</h3>
+					<p>Статический блог про обучение HTML и CSS.</p>
+				</section>
+			</div>
+		</main>
+		<footer class="page-footer">
+			<div class="container">
+				<a class="footer-email" href="mailto:yana.rozova@mail.ru">yana.rozova@mail.ru</a>
+				<a class="footer-phone" href="tel:+79604608234">+7 960 460 8 234</a>
+			</div>
+		</footer>
+	</body>
 </html>
