--- a/index.html
+++ b/index.html
@@ -15,24 +15,26 @@
 			</div>
 		</header>
 		<main>
-			<div class="container">
+			<div class="container"> 
 				<section class="hero-image">
 					<h1 class="heading">Розова Яна Сергеевна</h1>
 					<p>Junior верстальщик</p>
 				</section>
 				<section class="intro">
 					<h2 class="text-clear subheading">Резюме</h2>
-					<figure class="figure-clear">
-						<img src="files/iam.jpg"  width="928" height="536" alt="Моя фотография">
-					</figure>
-					<div>
-						<h3>Пара слов о себе</h3>
-						<p>
-							Образование высшее, бакалавр, инженер, магистр. Закончила Технологический институт Южного федерального университета (Таганрог) в 2010 году. Специальность: Оптические системы связи и
-							локации.
-						</p>
-						<p>С 2020 года увлекаюсь вёрсткой страниц сайтов. В 2021 прошла обучение на курсах "HTML Academy". Принимала участие в марафонах по вёрстке и "Кибер Битве-2021"</p>
-						<p><i>Интересы и хобби.</i> Играю в большой теннис. Работаю помощником тренера в клубе Play Теннис с 2007 года.</p>
+					<div class="rezume">
+						<figure class="figure-clear">
+							<img class="my-photo" src="files/iam4.jpg"  width="200" height="200" alt="Моя фотография">
+						</figure>
+						<div>
+							<h3>Пара слов о себе</h3>
+							<p>
+								Образование высшее, бакалавр, инженер, магистр. Закончила Технологический институт Южного федерального университета (Таганрог) в 2010 году. Специальность: Оптические системы связи и
+								локации.
+							</p>
+							<p>С 2020 года увлекаюсь вёрсткой страниц сайтов. В 2021 прошла обучение на курсах "HTML Academy". Принимала участие в марафонах по вёрстке и "Кибер Битве-2021"</p>
+							<p><i>Интересы и хобби.</i> Играю в большой теннис. Работаю помощником тренера в клубе Play Теннис с 2007 года.</p>
+						</div>
 					</div>
 				<div class="skills">
 					<h3>Основные навыки</h3>
@@ -51,8 +53,8 @@
 				</section>
 				<section class="portfolio">
 					<h2 class="subheading">Мои работы</h2>
-					<figure class="project-image">
-						<img src="files/projecttm.jpg" width="928" height="536" alt="Cайт магазина строительных материалов">
+					<figure class="figure-clear project-image">
+						<img src="files/site-pre-03.jpg" width="928" height="718" alt="Cайт магазина строительных материалов">
 					</figure>
 					<h3>Интернет-магазин "Техномарт"</h3>
 					<p>Сайт сделан в результате обучения в HTML Academy</p>
