--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="css/style.css" />
 		<title>Портфолио Junior верстальщика</title>
 	</head>
@@ -26,22 +26,22 @@
 				</section>
 				<section class="intro">
 					<h2 class="text-clear subheading">Резюме</h2>
-					<h3 class="text-clear sub-title">Обо мне</h3>
 					<div class="rezume">
 						<figure class="figure-clear my-photo-container">
-							<img class="my-photo" src="files/iam4.jpg" width="150" height="150" alt="Моя фотография" />
+							<img class="my-photo" src="files/iam.jpg" width="150" height="150" alt="Моя фотография" />
 						</figure>
 						<div>
+							<h3 class="text-clear sub-title">Обо мне</h3>
 							<p>
-								<i>Образование высшее, бакалавр, инженер, магистр.</i> Закончила Технологический институт Южного федерального университета (Таганрог) в 2010 году. <br> Специальность: Оптические системы связи и
-								локации.
+								<i>Образование высшее, бакалавр, инженер, магистр.</i> Закончила &laquo;Технологический институт Южного федерального университета&raquo; (Таганрог) в 2010 году. <br />
+								<i>Специальность: </i>Оптические системы связи и локации.
 							</p>
-							<p>С 2020 года увлекаюсь вёрсткой страниц сайтов. В 2021 прошла обучение на курсах "HTML Academy". Принимала участие в марафонах по вёрстке и "Кибер Битве-2021"</p>
-							<p>Играю в большой теннис. Работаю помощником тренера в клубе Play Теннис с 2007 года.</p>
+							<p>С 2020 года увлекаюсь вёрсткой страниц сайтов. В 2021 прошла обучение на курсах "HTML&nbsp;Academy". Принимала участие в марафонах по вёрстке и "Кибер Битве-2021"</p>
+							<p><i>Играю в большой теннис. </i>Работаю помощником тренера в клубе Play Теннис с 2007 года.</p>
 						</div>
 					</div>
 					<div class="skills">
-						<h3 class="text-clear sub-title">Основные навыки</h3>
+						<h3 class="text-clear sub-title center">Основные навыки</h3>
 						<dl class="list-clear skills-list">
 							<dt class="skill-html">HTML</dt>
 							<dd class="level"><div style="width: 60%">60%</div></dd>
@@ -52,17 +52,18 @@
 						</dl>
 						<p>
 							Вёрстка страниц сайтов в редакторе VS Code. Работа в программах Figma, Adobe Photoshop (ретуширование фотографий, создание макетов), Corel Draw (создание векторных изображений,
-							макетирование). Знание программ пакета Office. Начальные знания Adobe InDesign. Работа с офисной техникой (распечатка, сканирование, настройка). <br>Уровень владения компьютером: Продвинутый
-							пользователь.
+							макетирование). Знание программ пакета Office. Начальные знания Adobe InDesign. Работа с офисной техникой (распечатка, сканирование, настройка). Работа на оборудовании интерьерной и
+							полиграфической печати. <br />
+							<i>Уровень владения компьютером:</i> Продвинутый пользователь.
 						</p>
 					</div>
 				</section>
 				<section class="portfolio">
 					<h2 class="text-clear subheading">Мои работы</h2>
 					<div class="slider">
-						<input class="visually-hidden first-bullet" type="radio" name="slider-bullet" id="first-slide" checked />
-						<input class="visually-hidden second-bullet" type="radio" name="slider-bullet" id="second-slide" />
-						<input class="visually-hidden third-bullet" type="radio" name="slider-bullet" id="third-slide" />
+						<input class="visually-hidden slider-bullet first-bullet" type="radio" name="slider-bullet" id="first-slide" checked />
+						<input class="visually-hidden slider-bullet second-bullet" type="radio" name="slider-bullet" id="second-slide" />
+						<input class="visually-hidden slider-bullet third-bullet" type="radio" name="slider-bullet" id="third-slide" />
 						<div class="slider-controls">
 							<label class="slide-bullet first-label" tabindex="0" for="first-slide">
 								<span class="visually-hidden">1 слайд: Сайт для магазина Техномарт</span>
@@ -79,7 +80,7 @@
 							<div class="text-container">
 								<h3 class="text-clear sub-title">Сайт для интернет-магазина &laquo;Техномарт&raquo;</h3>
 								<p class="text-clear slider-description">
-									Реализован в процессе обучения на курсе профессиональной вёрстки в <a class="link-clear" href="https://htmlacademy.ru/courses">HTML Academy</a>
+									Реализован в процессе обучения на курсе профессиональной вёрстки в <a class="link-clear text-link" href="https://htmlacademy.ru/courses">HTML Academy</a>
 								</p>
 								<p class="text-clear slider-description">
 									Использованы Grid, Flex. Проходит проверку переполнения контентом. Имеет модальные окна, слайдеры, работающие на js и css. Реализована доступность для скринридеров.
@@ -92,7 +93,7 @@
 							<div class="text-container">
 								<h3 class="text-clear sub-title">Сайт для теннисного клуба &laquo;Play ТЕННИС&raquo;</h3>
 								<p class="text-clear slider-description">Реализован по собственному проекту.</p>
-								<p class="text-clear slider-description">Адаптивен для разных устройств. Использовыны Flex. Имеет меню-бургер, слайдер с фотогалереей, спойлеры, табы.</p>
+								<p class="text-clear slider-description">Адаптивен для разных устройств. Использованы Flex. Имеет меню-бургер, слайдер с фотогалереей, спойлеры, табы.</p>
 							</div>
 							<a class="link-clear button" target="_blank" href="https://chiprose.github.io/PlayTennis/">Открыть сайт</a>
 						</div>
@@ -121,15 +122,16 @@
 						</button>
 					</div>
 					<h3 class="text-clear sub-title">Блог начинающего верстальщика</h3>
-					<p>Начинать всегда трудно, ибо нет ничего неприятнее, чем пустая страница.</p>
+					<p>Начинать всегда трудно, ибо нет ничего неприятнее, чем пустая страница. А ещё труднее закончить, ведь нет же предела совершенству.</p>
 				</section>
 			</div>
 		</main>
 		<footer class="page-footer">
 			<div class="container">
 				<a class="link-clear footer-email" href="mailto:yana.rozova@mail.ru">yana.rozova@mail.ru</a>
-				<a class="link-clear  footer-phone" href="tel:+79604608234">+7 960 460 8 234</a>
+				<a class="link-clear footer-phone" href="tel:+79604608234">+7 960 460 8 234</a>
 			</div>
 		</footer>
+		<script src="js/script.js"></script>
 	</body>
 </html>
