Grammar mistake fixed

--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
                 <div class="slide-text-container">
                   <h3 class="section-subtitle">Сайт для интернет-магазина &laquo;Техномарт&raquo;</h3>
                   <p class="section-text">
-                    Реализован в процессе обучения на курсе профессиональной вёрстки в <a class="link-clear text-link" href="https://htmlacademy.ru/courses">HTML&nbsp;Academy</a>
+                    Реализован в процессе обучения на&nbsp;курсе профессиональной вёрстки в&nbsp;<a class="link-clear text-link" href="https://htmlacademy.ru/courses">HTML&nbsp;Academy</a>
                   </p>
                   <p class="section-text">
-                    Использованы Grid, Flex. Проходит проверку переполнения контентом. Имеет модальные окна, слайдеры, работающие на&nbsp;js&nbsp;и&nbsp;css. Реализована доступность для скринридеров.
+                    Использованы Grid, Flex. Проходит проверку переполнения контентом. Имеет модальные окна, слайдеры, работающие на&nbsp;JS&nbsp;и&nbsp;CSS. Реализована доступность для&nbsp;скринридеров.
                   </p>
                   <a class="button" target="_blank" href="https://chiprose.github.io/Technomart-StudingTask/">Открыть сайт</a>
                 </div>
