--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </dl>
             <p class="section-text">
               Вёрстка страниц сайтов в редакторе VS Code (HTML, CSS, JS). Фреймворк MJML. Работа в программах Figma, Adobe Photoshop (ретуширование фотографий, создание макетов), Corel Draw (создание
-              векторных изображений, макетирование). Знание программ пакета Office. Начальные знания Adobe InDesign. Работа с офисной техникой (распечатка, сканирование, настройка). Работа на
+              векторных изображений, макетирование). Общие знания Adobe InDesign, Adobe Illustrator. Знание программ пакета Office.  Работа с офисной техникой (распечатка, сканирование, настройка). Работа на
               оборудовании интерьерной и полиграфической печати. <br />
             </p>
             <p class="section-text"><i>Уровень владения компьютером:</i> Продвинутый пользователь.</p>
