navigation link work fixed

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <nav class="header-menu">
           <ul class="header-menu-list">
             <li class="header-menu-item">
-              <a href="#" class="header-menu-link">резюме</a>
+              <a href="#rezume" class="header-menu-link">резюме</a>
             </li>
             <li class="header-menu-item">
-              <a href="#" class="header-menu-link">портфолио</a>
+              <a href="#portfolio" class="header-menu-link">портфолио</a>
             </li>
           </ul>
         </nav>
@@ -60,6 +60,7 @@
       </div>
       <article class="rezume">
         <div class="container">
+					<a id="rezume"></a>
           <h2 class="section-title">
             <span class="section-title-name"> Резюме </span>
             <span class="section-title-profession"> frontend-разработчик </span>
@@ -142,6 +143,7 @@
       </article>
       <article class="portfolio">
         <div class="container">
+					<a id="portfolio"></a>
           <h2 class="portfolio-title">Мои работы</h2>
           <div class="slider">
             <div class="slider-controls">
