button up added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Портфолио Frontend-разработчика</title>
   </head>
   <body class="body-page">
+		<a class="button-up" type="button" href="#menu"><span class="button-up-text">UP</span></a>
+		<a id="menu"></a>
     <header class="header">
       <div class="container">
         <nav class="header-menu">
