--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Портфолио Frontend-разработчика</title>
   </head>
   <body class="body-page">
-		<a class="button-up" type="button" href="#menu"><span class="button-up-text">UP</span></a>
+		<a class="button-up" type="button" href="#menu" title="Переход на верх старницы"><span class="button-up-text">UP</span></a>
 		<a id="menu"></a>
     <header class="header">
       <div class="container">
@@ -25,7 +25,7 @@
         </nav>
         <ul class="header-contacts-list">
           <li class="header-contact-item">
-            <a class="header-contact-link header-email" href="mailto:yana.rozova@mail.ru">
+            <a class="header-contact-link header-email" href="mailto:yana.rozova@mail.ru" title="Написать письмо Frontend-разработчику">
               <svg class="icon-email icon" fill="none" height="14" viewBox="0 0 20 14" width="20" xmlns="http://www.w3.org/2000/svg">
                 <path
                   clip-rule="evenodd"
@@ -37,7 +37,7 @@
             </a>
           </li>
           <li class="header-contact-item">
-            <a class="header-contact-link header-phone" href="tel:+79604608234">
+            <a class="header-contact-link header-phone" href="tel:+79604608234" title="Позвонить Frontend-разработчику ">
               <svg class="icon-phone icon" fill="none" height="19" viewBox="0 0 18 19" width="18" xmlns="http://www.w3.org/2000/svg">
                 <path
                   clip-rule="evenodd"
@@ -75,14 +75,14 @@
               </picture>
               <div class="introduction-text">
                 <p class="section-text">
-                  <i>Образование высшее, бакалавр, инженер, магистр.</i> Закончила &laquo;Технологический институт Южного федерального университета&raquo; (Таганрог) в 2010 году. <br />
+                  <em>Образование высшее, бакалавр, инженер, магистр.</em> Закончила &laquo;Технологический институт Южного федерального университета&raquo; (Таганрог) в&nbsp;2010&nbsp;году. <br />
                 </p>
-                <p class="section-text"><i>Специальность: </i>Оптические системы связи и локации.</p>
+                <p class="section-text"><em>Специальность: </em>Оптические системы связи и&nbsp;локации.</p>
                 <p class="section-text">
-                  С 2020 года увлекаюсь вёрсткой страниц сайтов. В 2021 прошла обучение на курсе "Профессиональная вёрстка сайтов" в "HTML&nbsp;Academy". Принимала участие в марафонах по вёрстке и
+                  С&nbsp;2020&nbsp;года увлекаюсь вёрсткой страниц сайтов. В&nbsp;2021&nbsp;году&nbsp;прошла обучение на курсе "Профессиональная вёрстка сайтов" в&nbsp;"HTML&nbsp;Academy". Принимала участие в марафонах по вёрстке и
                   "Кибер Битве-2021"
                 </p>
-                <p class="section-text"><i>Играю в большой теннис. </i>Работаю помощником тренера в клубе Play Теннис с 2007 года.</p>
+                <p class="section-text"><em>Играю в&nbsp;большой теннис. </em>Работаю помощником тренера в&nbsp;клубе Play Теннис с&nbsp;2007&nbsp;года.</p>
               </div>
             </div>
           </section>
@@ -135,11 +135,11 @@
               </div>
             </dl>
             <p class="section-text">
-              Вёрстка страниц сайтов в редакторе VS Code (HTML, CSS, JS). Фреймворк MJML. Работа в программах Figma, Adobe Photoshop (ретуширование фотографий, создание макетов), Corel Draw (создание
-              векторных изображений, макетирование). Общие знания Adobe InDesign, Adobe Illustrator. Знание программ пакета Office.  Работа с офисной техникой (распечатка, сканирование, настройка). Работа на
-              оборудовании интерьерной и полиграфической печати. <br />
+              Вёрстка страниц сайтов в&nbsp;редакторе VS&nbsp;Code (HTML, CSS, JS). Фреймворк&nbsp;MJML. Работа в&nbsp;программах Figma, Adobe Photoshop (ретуширование фотографий, создание макетов), Corel Draw (создание
+              векторных изображений, макетирование). Общие знания Adobe InDesign, Adobe Illustrator. Знание программ пакета Office.  Работа с&nbsp;офисной техникой (распечатка, сканирование, настройка). Работа на
+							&nbsp;оборудовании интерьерной и&nbsp;полиграфической печати. <br />
             </p>
-            <p class="section-text"><i>Уровень владения компьютером:</i> Продвинутый пользователь.</p>
+            <p class="section-text"><em>Уровень владения компьютером:</у> Продвинутый пользователь.</p>
           </section>
         </div>
       </article>
@@ -180,12 +180,12 @@
                 <div class="slide-text-container">
                   <h3 class="section-subtitle">Сайт для интернет-магазина &laquo;Техномарт&raquo;</h3>
                   <p class="section-text">
-                    Реализован в процессе обучения на&nbsp;курсе профессиональной вёрстки в&nbsp;<a class="link-clear text-link" href="https://htmlacademy.ru/courses">HTML&nbsp;Academy</a>
+                    Реализован в&nbsp;процессе обучения на&nbsp;курсе профессиональной вёрстки в&nbsp;<a class="link-clear text-link" href="https://htmlacademy.ru/courses">HTML&nbsp;Academy</a>
                   </p>
                   <p class="section-text">
                     Использованы Grid, Flex. Проходит проверку переполнения контентом. Имеет модальные окна, слайдеры, работающие на&nbsp;JS&nbsp;и&nbsp;CSS. Реализована доступность для&nbsp;скринридеров.
                   </p>
-                  <a class="button" target="_blank" href="https://chiprose.github.io/Technomart-StudingTask/">Открыть сайт</a>
+                  <a class="button" target="_blank" href="https://chiprose.github.io/Technomart-StudingTask/" title="Просмотреть опубликованный сайт">Открыть сайт</a>
                 </div>
               </li>
               <li class="slider-item">
@@ -194,7 +194,7 @@
                   <h3 class="section-subtitle">Сайт для теннисного клуба &laquo;Play ТЕННИС&raquo;</h3>
                   <p class="section-text">Реализован по собственному проекту.</p>
                   <p class="section-text">Адаптивен для разных устройств. Использованы Flex. Имеет меню-бургер, слайдер с фотогалереей, спойлеры, табы.</p>
-                  <a class="button" target="_blank" href="https://chiprose.github.io/PlayTennis/">Открыть сайт</a>
+                  <a class="button" target="_blank" href="https://chiprose.github.io/PlayTennis/" title="Просмотреть опубликованный сайт">Открыть сайт</a>
                 </div>
               </li>
               <li class="slider-item">
@@ -205,7 +205,7 @@
                   <p class="section-text">
                     Адаптивен для разных устройств. Использованы Flex. Имеет меню-бургер, слайдер с фотогалереей, спойлеры, табы. Постоянно модерируется, так как нет предела совершенству.
                   </p>
-                  <a class="button" target="_blank" href="https://chiprose.github.io/PlayTennis/">Открыть сайт</a>
+                  <a class="button" target="_blank" href="https://chiprose.github.io/PlayTennis/" title="Просмотреть опубликованный сайт">Открыть сайт</a>
                 </div>
               </li>
             </ul>
@@ -215,8 +215,8 @@
     </main>
     <footer class="page-footer">
       <div class="container">
-        <a class="link-clear footer-github" href="https://github.com/ChipRose">GitHub</a>
-        <a class="link-clear footer-phone" href="tel:+79604608234">+7 960 460 8 234</a>
+        <a class="link-clear footer-github" href="https://github.com/ChipRose" title="Посмотреть работы на GitHub">GitHub</a>
+        <a class="link-clear footer-phone" href="tel:+79604608234" title="Позвонить Frontend-разработчику">+7 960 460 8 234</a>
       </div>
     </footer>
     <script src="js/script.js"></script>
