bracket bugs fixed

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               векторных изображений, макетирование). Общие знания Adobe InDesign, Adobe Illustrator. Знание программ пакета Office.  Работа с&nbsp;офисной техникой (распечатка, сканирование, настройка). Работа на
 							&nbsp;оборудовании интерьерной и&nbsp;полиграфической печати. <br />
             </p>
-            <p class="section-text"><em>Уровень владения компьютером:</у> Продвинутый пользователь.</p>
+            <p class="section-text"><em>Уровень владения компьютером:</em> Продвинутый пользователь.</p>
           </section>
         </div>
       </article>
