link's bugs fixed

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Портфолио Frontend-разработчика</title>
   </head>
   <body class="body-page">
-		<a class="button-up" type="button" href="#menu" title="Переход на верх старницы"><span class="button-up-text">UP</span></a>
-		<a id="menu"></a>
+    <a class="button-up" type="button" href="#menu" title="Переход на верх старницы"><span class="button-up-text">UP</span></a>
+    <a id="menu"></a>
     <header class="header">
       <div class="container">
         <nav class="header-menu">
@@ -62,7 +62,7 @@
       </div>
       <article class="rezume">
         <div class="container">
-					<a id="rezume"></a>
+          <a id="rezume"></a>
           <h2 class="section-title">
             <span class="section-title-name"> Резюме </span>
             <span class="section-title-profession"> frontend-разработчик </span>
@@ -79,8 +79,8 @@
                 </p>
                 <p class="section-text"><em>Специальность: </em>Оптические системы связи и&nbsp;локации.</p>
                 <p class="section-text">
-                  С&nbsp;2020&nbsp;года увлекаюсь вёрсткой страниц сайтов. В&nbsp;2021&nbsp;году&nbsp;прошла обучение на курсе "Профессиональная вёрстка сайтов" в&nbsp;"HTML&nbsp;Academy". Принимала участие в марафонах по вёрстке и
-                  "Кибер Битве-2021"
+                  С&nbsp;2020&nbsp;года увлекаюсь вёрсткой страниц сайтов. В&nbsp;2021&nbsp;году&nbsp;прошла обучение на курсе "Профессиональная вёрстка сайтов" в&nbsp;"HTML&nbsp;Academy". Принимала
+                  участие в марафонах по вёрстке и "Кибер Битве-2021"
                 </p>
                 <p class="section-text"><em>Играю в&nbsp;большой теннис. </em>Работаю помощником тренера в&nbsp;клубе Play Теннис с&nbsp;2007&nbsp;года.</p>
               </div>
@@ -135,9 +135,9 @@
               </div>
             </dl>
             <p class="section-text">
-              Вёрстка страниц сайтов в&nbsp;редакторе VS&nbsp;Code (HTML, CSS, JS). Фреймворк&nbsp;MJML. Работа в&nbsp;программах Figma, Adobe Photoshop (ретуширование фотографий, создание макетов), Corel Draw (создание
-              векторных изображений, макетирование). Общие знания Adobe InDesign, Adobe Illustrator. Знание программ пакета Office.  Работа с&nbsp;офисной техникой (распечатка, сканирование, настройка). Работа на
-							&nbsp;оборудовании интерьерной и&nbsp;полиграфической печати. <br />
+              Вёрстка страниц сайтов в&nbsp;редакторе VS&nbsp;Code (HTML, CSS, JS). Фреймворк&nbsp;MJML. Работа в&nbsp;программах Figma, Adobe Photoshop (ретуширование фотографий, создание макетов),
+              Corel Draw (создание векторных изображений, макетирование). Общие знания Adobe InDesign, Adobe Illustrator. Знание программ пакета Office. Работа с&nbsp;офисной техникой (распечатка,
+              сканирование, настройка). Работа на &nbsp;оборудовании интерьерной и&nbsp;полиграфической печати. <br />
             </p>
             <p class="section-text"><em>Уровень владения компьютером:</em> Продвинутый пользователь.</p>
           </section>
@@ -145,7 +145,7 @@
       </article>
       <article class="portfolio">
         <div class="container">
-					<a id="portfolio"></a>
+          <a id="portfolio"></a>
           <h2 class="portfolio-title">Мои работы</h2>
           <div class="slider">
             <div class="slider-controls">
@@ -180,10 +180,11 @@
                 <div class="slide-text-container">
                   <h3 class="section-subtitle">Сайт для интернет-магазина &laquo;Техномарт&raquo;</h3>
                   <p class="section-text">
-                    Реализован в&nbsp;процессе обучения на&nbsp;курсе профессиональной вёрстки в&nbsp;<a class="link-clear text-link" href="https://htmlacademy.ru/courses">HTML&nbsp;Academy</a>
+                    Реализован в&nbsp;процессе обучения на&nbsp;курсе профессиональной вёрстки в&nbsp;<a href="https://htmlacademy.ru/" class="text-link" title="Сайт HTML Academy">HTML&nbsp;Academy</a>
                   </p>
                   <p class="section-text">
-                    Использованы Grid, Flex. Проходит проверку переполнения контентом. Имеет модальные окна, слайдеры, работающие на&nbsp;JS&nbsp;и&nbsp;CSS. Реализована доступность для&nbsp;скринридеров.
+                    Использованы Grid, Flex. Проходит проверку переполнения контентом. Имеет модальные окна, слайдеры, работающие на&nbsp;JS&nbsp;и&nbsp;CSS. Реализована доступность
+                    для&nbsp;скринридеров.
                   </p>
                   <a class="button" target="_blank" href="https://chiprose.github.io/Technomart-StudingTask/" title="Просмотреть опубликованный сайт">Открыть сайт</a>
                 </div>
@@ -215,8 +216,8 @@
     </main>
     <footer class="page-footer">
       <div class="container">
-        <a class="link-clear footer-github" href="https://github.com/ChipRose" title="Посмотреть работы на GitHub">GitHub</a>
-        <a class="link-clear footer-phone" href="tel:+79604608234" title="Позвонить Frontend-разработчику">+7 960 460 8 234</a>
+        <a class="footer-github footer-link" href="https://github.com/ChipRose" title="Посмотреть работы на GitHub">GitHub</a>
+        <a class="footer-phone footer-link" href="tel:+79604608234" title="Позвонить Frontend-разработчику">+7 960 460 8 234</a>
       </div>
     </footer>
     <script src="js/script.js"></script>
